{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "7186498d-7a37-460b-919d-0e9821f83023",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "acd14100-007e-4e69-a575-13ac2311d4ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "29323a58-cdf5-4474-87c1-ff2104f7c2d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8addc566-da62-4296-9f4a-066f2f6b1b23",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d33e53d0-7972-48a7-856b-285f257cfab6",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Action",
            "id": "7531efdc-aeeb-4c26-80ba-dde850b44dbd",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "04b5785d-fb4e-4b49-8a83-be4fa8923317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "215c0bce-cff9-4c38-8d8c-acea35b75409",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}