{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Movement",
            "id": "7186498d-7a37-460b-919d-0e9821f83023",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "acd14100-007e-4e69-a575-13ac2311d4ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "29323a58-cdf5-4474-87c1-ff2104f7c2d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "4d80e28b-2390-48e5-95d6-06cdef95b2e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8addc566-da62-4296-9f4a-066f2f6b1b23",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d33e53d0-7972-48a7-856b-285f257cfab6",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false,invertY=false)",
                    "groups": "Xbox",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ZQSD",
                    "id": "ee15078c-b112-433f-be79-f6e1005a575a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false,invertY=false)",
                    "groups": "",
                    "action": "Position",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2a124a52-7470-45a8-bd7f-e13ca2434e35",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e06250ca-9375-458b-85e7-ff4e6887c7ed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4dc4a449-4461-448d-a0df-1b09b0551f81",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b8834343-5547-4c0d-9094-86fc05e3f79e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2835f29-4877-44ac-b36c-08f53dae3798",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Action",
            "id": "7531efdc-aeeb-4c26-80ba-dde850b44dbd",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "04b5785d-fb4e-4b49-8a83-be4fa8923317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "shortCard",
                    "type": "Button",
                    "id": "c378e838-7fec-41ff-a419-cad94584c253",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "longCard",
                    "type": "Button",
                    "id": "e8c33c70-f1a9-4bff-b265-1358f1152b65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "6039ff49-f929-469c-8cc8-ceae49ef8e78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "215c0bce-cff9-4c38-8d8c-acea35b75409",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "332030e1-728b-40e4-85d9-a93afcc6d63c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "shortCard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0e1d293-5a07-412c-a9b2-74acf968f407",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "longCard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31bfda7e-383b-4994-a42d-47f0714f019d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "425e44f1-3dc9-4178-8277-7f73a50e4d27",
            "actions": [
                {
                    "name": "CardMenu",
                    "type": "Button",
                    "id": "64339e01-92b9-4581-a93d-af0334cb9e1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b4775ba6-b6d5-4d48-8200-b72c3a15ea31",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CardMenu",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5d85bad8-056a-4e92-9d90-0dc447f32622",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CardMenu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c97f1d7e-19d0-4ee6-9e95-323a733c4d93",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CardMenu",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keybord",
            "bindingGroup": "Keybord",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}